k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: landingpage-dev
  labels:
    app: landingpage-dev
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
    - port: 443
      targetPort: 3000
      protocol: TCP
      name: https
  selector:
    app: landingpage-dev
